# qpid-interop-test

./: .asf.yaml  .gitignore  .project  .pydevproject  CMakeLists.txt  NOTICE  QUICKSTART  QUICKSTART.md  README  README.md  STATUS  config.sh.in  get-proj-ver  get-python-dir-name  java-build.sh  java-clean.sh  local-build.sh  pom.xml  setup.py
CMakeModules/: FindProtonCpp.cmake
containers/: Dockerfile.centos8  Dockerfile.f34  Dockerfile.focal
docs/: CMakeLists.txt  RELEASE.txt  Shim_HOWTO.txt  Test_HOWTO.txt  USERGUIDE.md  qpid-interop-test-devel-overview.txt  users-guide.txt
etc/: proton-python-amqp-types.patch
jars/: README
shims/amqpnetlite/src/: CMakeLists.txt
shims/amqpnetlite/src/amqp_complex_types_test/: .gitignore
shims/amqpnetlite/src/amqp_large_content_test/Receiver/: Receiver.cs  Receiver.csproj.in
shims/amqpnetlite/src/amqp_large_content_test/Receiver/Properties/: AssemblyInfo.cs
shims/amqpnetlite/src/amqp_large_content_test/Sender/: Sender.cs  Sender.csproj.in  packages.config
shims/amqpnetlite/src/amqp_large_content_test/Sender/Properties/: AssemblyInfo.cs
shims/amqpnetlite/src/amqp_types_test/Receiver/: App.config  Receiver.cs  Receiver.csproj  Receiver.csproj.in
shims/amqpnetlite/src/amqp_types_test/Sender/: Sender.cs  Sender.csproj  Sender.csproj.in
shims/fe2o3-amqp/: CMakeLists.txt  Cargo.toml  
shims/fe2o3-amqp/amqp_complex_types_test/: CMakeLists.txt  Cargo.toml
shims/fe2o3-amqp/amqp_large_content_test/: CMakeLists.txt  Cargo.toml
shims/fe2o3-amqp/amqp_large_content_test/src/: lib.rs
shims/fe2o3-amqp/amqp_types_test/: CMakeLists.txt  Cargo.toml
shims/fe2o3-amqp/amqp_types_test/amqp_types_test/: Makefile  cmake_install.cmake
shims/fe2o3-amqp/amqp_types_test/src/: lib.rs
shims/fe2o3-amqp/interop_test_common/: Cargo.toml
shims/fe2o3-amqp/interop_test_common/src/: lib.rs
shims/qpid-jms/: .gitignore  CMakeLists.txt  java-build.sh  pom.xml
shims/qpid-jms/src/: .gitignore
shims/qpid-jms/src/main/java/org/apache/qpid/interop_test/jms_hdrs_props_test/: Receiver.java  Sender.java
shims/qpid-jms/src/main/java/org/apache/qpid/interop_test/jms_messages_test/: Receiver.java  Sender.java
shims/qpid-jms/src/main/java/org/apache/qpid/interop_test/shim/: AmqpSender.java  JmsSenderShim.java  ProtonJmsReceiver.java  ProtonJmsSender.java
shims/qpid-jms/src/main/java/org/apache/qpid/qpid_interop_test/amqp_types_test/: Receiver.java  Sender.java
shims/qpid-jms/src/main/java/org/apache/qpid/qpid_interop_test/jms_dtx_test/: Receiver.java  Sender.java
shims/qpid-jms/src/main/java/org/apache/qpid/qpid_interop_test/jms_hdrs_props_test/: Receiver.java  Sender.java
shims/qpid-jms/src/main/java/org/apache/qpid/qpid_interop_test/jms_large_content_test/: Receiver.java  Sender.java
shims/qpid-jms/src/main/java/org/apache/qpid/qpid_interop_test/jms_messages_test/: Receiver.java  Sender.java
shims/qpid-jms/src/main/java/org/apache/qpid/qpid_interop_test/shim/: AmqpReceiver.java  AmqpSender.java  JmsReceiverShim.java  JmsSenderShim.java
shims/qpid-jms/src_not_yet_impl/main/java/org/apache/qpid/qpid_interop_test/jms_dtx_test/: Receiver.java  Sender.java
shims/qpid-jms/src_not_yet_impl/main/java/org/apache/qpid/qpid_interop_test/jms_large_content_test/: Receiver.java  Sender.java
shims/qpid-proton-cpp/: .gitignore  CMakeLists.txt
shims/qpid-proton-cpp/src/: CMakeLists.txt
shims/qpid-proton-cpp/src/not_yet_impl/amqp_dtx_test/: Receiver.cpp  Sender.hpp
shims/qpid-proton-cpp/src/not_yet_impl/amqp_features_test/: Sender.cpp  Sender.hpp
shims/qpid-proton-cpp/src/not_yet_impl/jms_dtx_test/: Receiver.cpp  Receiver.hpp  Sender.cpp  Sender.hpp
shims/qpid-proton-cpp/src/not_yet_impl/jms_large_content_test/: Receiver.cpp  Receiver.hpp  Sender.hpp
shims/qpid-proton-cpp/src/qpidit/: AmqpReceiverBase.cpp  AmqpReceiverBase.hpp  AmqpSenderBase.cpp  AmqpSenderBase.hpp  AmqpTestBase.cpp  AmqpTestBase.hpp  Base64.cpp  Base64.hpp  JmsTestBase.cpp  JmsTestBase.hpp  QpidItErrors.cpp  QpidItErrors.hpp
shims/qpid-proton-cpp/src/qpidit/amqp_complex_types_test/: .gitignore  Common.cpp  Common.hpp  Receiver.cpp  Receiver.hpp  Sender.cpp  Sender.hpp  data_utils.hpp
shims/qpid-proton-cpp/src/qpidit/amqp_dtx_test/: Receiver.hpp  Sender.cpp  Sender.hpp
shims/qpid-proton-cpp/src/qpidit/amqp_features_test/: Receiver.cpp  Receiver.hpp  Sender.cpp  Sender.hpp
shims/qpid-proton-cpp/src/qpidit/amqp_large_content_test/: Receiver.cpp  Receiver.hpp  Sender.cpp  Sender.hpp
shims/qpid-proton-cpp/src/qpidit/amqp_types_test/: Receiver.cpp  Receiver.hpp  Sender.cpp  Sender.hpp
shims/qpid-proton-cpp/src/qpidit/jms_dtx_test/: Receiver.hpp  Sender.hpp
shims/qpid-proton-cpp/src/qpidit/jms_hdrs_props_test/: Receiver.cpp  Receiver.hpp  Sender.cpp  Sender.hpp
shims/qpid-proton-cpp/src/qpidit/jms_large_content_test/: Receiver.hpp  Sender.cpp  Sender.hpp
shims/qpid-proton-cpp/src/qpidit/jms_messages_test/: JmsDefinitions.hpp  Receiver.cpp  Receiver.hpp  Sender.cpp  Sender.hpp
shims/qpid-proton-cpp/src/qpidit/shim/: AmqpReceiver.cpp  AmqpReceiver.hpp  AmqpSender.cpp  AmqpSender.hpp  JmsDefinitions.hpp  JmsReceiver.cpp  JmsReceiver.hpp  JmsSender.cpp  JmsSender.hpp
shims/qpid-proton-go/: CMakeLists.txt
shims/qpid-proton-go/src/qpid.apache.org/amqp_types_test/: shim.go  shim_test.go
shims/qpid-proton-go/src/qpid.apache.org/amqp_types_test/shims/: Receiver.go  Sender.go
shims/qpid-proton-python/: CMakeLists.txt
shims/qpid-proton-python/src/: CMakeLists.txt  JmsReceiverShim.py  JmsSenderShim.py  TypesReceiverShim.py  TypesSenderShim.py  _compat.py  amqp-receive  amqp-send  jms-receiver-shim.py  jms-sender-shim.py  proton-python-receive  proton-python-send
shims/rhea-js/: CMakeLists.txt
shims/rhea-js/amqp_complex_types_test/: .gitignore
shims/rhea-js/amqp_types_test/: .gitignore  README  Receiver.js  Sender.js  rhea-long-ulong.patch
src/py/qpid-interop-test/: __init__.py  broker_properties.py  interop_test_errors.py  shim_utils.py  test_type_map.py
src/python/not_yet_impl/: amqp_dtx_test.py  jms_dtx_test.py  (+1 more)
utils/: .gitignore  pom.xml
(+69 files in other folders)
